# juniper_example

./: Cargo.toml
src/: client.graphql  server_schema.graphql
