[package]
name = "juniper_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
futures = "0.3"
futures-lite = "2.6"
graphql_client = "0.14"
graphql-ws-client = { version = "0.11", features = ["client-graphql-client", "tungstenite"] }
juniper = { version = "0.16", features = ["schema-language"] }
juniper_axum = { version = "0.2", features = ["subscriptions"] }
juniper_graphql_ws = "0.4"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tracing = "0.1"
serde = "1"
tracing-subscriber = "0.3"
async-tungstenite = { version = "0.28", features = ["tokio-runtime"] }
